test/langtools/tools/javac/finalLoopVars/FinalLoopVarsConstValue.out
FinalLoopVarsConstValue.java:16:13: compiler.err.unreachable.stmt
FinalLoopVarsConstValue.java:24:9: compiler.err.unreachable.stmt
FinalLoopVarsConstValue.java:38:13: compiler.err.unreachable.stmt
3 errors
